added nuget package

--- a/nexus-git.csproj
+++ b/nexus-git.csproj
@@ -7,5 +7,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    
+    <None Include="lib/nexus-git.dll" Pack="true" />
+  
+  </ItemGroup>
 
 </Project>
