--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -26,7 +26,8 @@ jobs:
 
       - name: Publish package to Nexus
         run: |
-          dotnet nuget push bin/Release/nexus-git.1.0.0.nupkg --source https://52.187.94.85:8081/repository/yashm-nuget/ --api-key ${{ secrets.NEXUS_API_KEY }}        
+           
+           curl -v -u $NEXUS_USERNAME:$NEXUS_PASSWORD -F "file=@./bin/Release/nexus-git.1.0.0.nupkg" http://52.187.94.85:8081/repository/yashm-nuget/nexus-git.1.0.0.nupkg      
         env:
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
           NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
