--- a/.github/workflows/nuget-named.yaml
+++ b/.github/workflows/nuget-named.yaml
@@ -34,20 +34,22 @@ jobs:
     - name: Pack
       id: pack
       run: |
-        # Get the short commit ID
+        # Get the short commit ID (first 6 characters of the commit hash)
         SHORT_COMMIT_ID=$(echo "${GITHUB_SHA}" | cut -c1-6)
 
         # Determine the package name based on the branch
         if [[ "${GITHUB_REF}" == "refs/heads/development" ]]; then
+          # For development branch, include job ID in the package name
           PACKAGE_NAME="nexus-git_${GITHUB_RUN_ID}_develop.nupkg"
         elif [[ "${GITHUB_REF}" == "refs/heads/release" ]]; then
+          # For release branch, use version 1.0.0 and include short commit ID
           PACKAGE_NAME="nexus-git_1.0.0_release_${SHORT_COMMIT_ID}.nupkg"
         fi
 
-        # Pack the project
+        # Pack the project (do not rebuild it)
         dotnet pack --configuration Release --output ./output --no-build
 
-        # Rename the .nupkg file
+        # Rename the .nupkg file with the determined name
         ORIGINAL_PACKAGE_NAME="nexus-git_1.0.0.nupkg" # Adjust this if your versioning changes
         mv "./output/${ORIGINAL_PACKAGE_NAME}" "./output/${PACKAGE_NAME}"
         echo "PACKAGE_NAME=${PACKAGE_NAME}" >> $GITHUB_ENV
@@ -63,6 +65,7 @@ jobs:
       run: |
         echo "Pushing package: ./output/${{ env.PACKAGE_NAME }}"
         if [[ "${GITHUB_REF}" == "refs/heads/development" || "${GITHUB_REF}" == "refs/heads/release" ]]; then
+          # Push the package to Nexus with the correct versioning scheme
           dotnet nuget push "./output/${{ env.PACKAGE_NAME }}" --source http://52.187.94.85:8081/repository/yashm-nuget/ --api-key ${{ secrets.NEXUS_API_KEY }} 
         fi
 
@@ -74,7 +77,28 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Get release version from release branch
+      run: |
+        # Get the version from the release branch
+        VERSION="1.0.0"  # You can extract this dynamically from tags or files if needed
+        PACKAGE_NAME="nexus-git-${VERSION}.nupkg"
+        echo "PACKAGE_NAME=${PACKAGE_NAME}" >> $GITHUB_ENV
+
     - name: Create Tag
       run: |
-        git tag 1.0.0
-        git push origin 1.0.0
+        # Create a new tag for version 1.0.0 on master
+        git tag -a "v1.0.0" -m "Release version 1.0.0"
+        git push origin v1.0.0
+
+    - name: List output directory (Master)
+      run: ls -la ./output
+
+    - name: Publish to Nexus (Master)
+      env:
+        NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+        NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+        NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
+      run: |
+        echo "Pushing package: ./output/${{ env.PACKAGE_NAME }}"
+        # Publish the package to Nexus with the version from the release branch
+        dotnet nuget push "./output/${{ env.PACKAGE_NAME }}" --source http://52.187.94.85:8081/repository/yashm-nuget/ --api-key ${{ secrets.NEXUS_API_KEY }} 
