--- a/.github/workflows/nuget-named.yaml
+++ b/.github/workflows/nuget-named.yaml
@@ -29,39 +29,45 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Publish
-      run: |
-        # Get the short commit ID (first 6 characters of the commit hash)
-        SHORT_COMMIT_ID=$(echo "${GITHUB_SHA}" | cut -c1-6)
-
-        # Determine the output directory and package name based on the branch
-        if [[ "${GITHUB_REF}" == "refs/heads/development" ]]; then
-          # For development branch, include job ID in the package name
-          OUTPUT_DIR="./output/development-${GITHUB_RUN_ID}"
-          PACKAGE_NAME="nexus-git_${GITHUB_RUN_ID}_develop"
-        elif [[ "${GITHUB_REF}" == "refs/heads/release" ]]; then
-          # For release branch, use version 1.0.0 and include short commit ID
-          OUTPUT_DIR="./output/release-${SHORT_COMMIT_ID}"
-          PACKAGE_NAME="nexus-git_1.0.0_release_${SHORT_COMMIT_ID}"
-        fi
-
-        # Publish the project to a dynamic output directory
-        echo "Publishing project to directory: ${OUTPUT_DIR}"
-
-        dotnet publish --configuration Release --output "${OUTPUT_DIR}"
-
-        # Dynamically find and rename the .nupkg file after publishing
-        GENERATED_PACKAGE=$(find ${OUTPUT_DIR} -name "*.nupkg")
-        mv "$GENERATED_PACKAGE" "${OUTPUT_DIR}/${PACKAGE_NAME}.nupkg"
-        echo "PACKAGE_NAME=${PACKAGE_NAME}.nupkg" >> $GITHUB_ENV
-
-    - name: List output directory
-      run: ls -la ./output
+      run: dotnet publish --configuration Release --output ./output
 
     - name: Pack
       id: pack
       run: |
-        # We don't need to pack here again, just for publishing
-        echo "Package already renamed during publish process."
+        # Get the short commit ID (first 6 characters of the commit hash)
+        SHORT_COMMIT_ID=$(echo "${GITHUB_SHA}" | cut -c1-6)
+
+        # Determine the package name based on the branch
+        if [[ "${GITHUB_REF}" == "refs/heads/development" ]]; then
+          # For development branch, include job ID in the package name
+          PACKAGE_NAME="nexus-git_${GITHUB_RUN_ID}_develop"
+          VERSION="${GITHUB_RUN_ID}"  # Using the GitHub Run ID as the version for dev builds
+        elif [[ "${GITHUB_REF}" == "refs/heads/release" ]]; then
+          # For release branch, use version 1.0.0 and include short commit ID
+          PACKAGE_NAME="nexus-git_1.0.0_release_${SHORT_COMMIT_ID}"
+          VERSION="1.0.0"
+        fi
+
+        # Pack the project with the dynamically set version and package name
+        echo "Packing project with version: ${VERSION} and package name: ${PACKAGE_NAME}"
+
+        dotnet pack --configuration Release --output ./output --no-build \
+          /p:PackageVersion=${VERSION} \
+          /p:PackageId=nexus-git \
+          /p:FileVersion=${SHORT_COMMIT_ID} \
+          /p:PackageReleaseNotes="Built from ${GITHUB_REF} branch at commit ${GITHUB_SHA}"
+
+        # List files in the output directory to see the exact generated package name
+        echo "Listing files in output directory:"
+        ls -la ./output
+
+        # Dynamically find and rename the .nupkg file
+        GENERATED_PACKAGE=$(ls ./output/*.nupkg)
+        mv "$GENERATED_PACKAGE" "./output/${PACKAGE_NAME}.nupkg"
+        echo "PACKAGE_NAME=${PACKAGE_NAME}.nupkg" >> $GITHUB_ENV
+
+    - name: List output directory
+      run: ls -la ./output
 
     - name: Publish to Nexus
       env:
@@ -69,12 +75,11 @@ jobs:
         NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
         NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
       run: |
-        # The package name is dynamically set earlier in the workflow
         echo "Pushing package: ./output/${{ env.PACKAGE_NAME }}"
 
         # Ensure we're pushing from development or release branch with correct file name
         if [[ "${GITHUB_REF}" == "refs/heads/development" || "${GITHUB_REF}" == "refs/heads/release" ]]; then
-          # Push the package to Nexus with the dynamically generated file name
+          # Push the package to Nexus with the correct naming convention
           dotnet nuget push "./output/${{ env.PACKAGE_NAME }}" --source http://52.187.94.85:8081/repository/yashm-nuget/ --api-key ${{ secrets.NEXUS_API_KEY }} 
         fi
 
