--- a/.github/workflows/nuget-named.yaml
+++ b/.github/workflows/nuget-named.yaml
@@ -40,11 +40,11 @@ jobs:
         # Determine the package name based on the branch
         if [[ "${GITHUB_REF}" == "refs/heads/development" ]]; then
           # For development branch, include job ID in the package name
-          PACKAGE_NAME="nexus-git_${GITHUB_RUN_ID}_develop"
+          PACKAGE_NAME="nexus-git.${GITHUB_RUN_ID}.develop"
           VERSION="${GITHUB_RUN_ID}"  # Using the GitHub Run ID as the version for dev builds
         elif [[ "${GITHUB_REF}" == "refs/heads/release" ]]; then
           # For release branch, use version 1.0.0 and include short commit ID
-          PACKAGE_NAME="nexus-git_1.0.0_release_${SHORT_COMMIT_ID}"
+          PACKAGE_NAME="nexus-git.1.0.0.release.${SHORT_COMMIT_ID}"
           VERSION="1.0.0"
         fi
 
