--- a/nexus-git.csproj
+++ b/nexus-git.csproj
@@ -7,9 +7,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Version>1.0.0</Version>  
-    <!--<PackageId>nexus-gitreleasee</PackageId> -->
+    <PackageId>nexus-gitrele</PackageId> 
   </PropertyGroup>
-
+<!--
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
@@ -21,5 +21,5 @@
         <PackageVersion Condition="'$(BuildConfiguration)' == 'Release' and '$(BranchName)' == 'master'">1.0.0</PackageVersion>
     </PropertyGroup>
   </Target>
-
+-->
 </Project>
