--- a/nexus-git.csproj
+++ b/nexus-git.csproj
@@ -7,7 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Version>1.0.0</Version>  
-    <PackageId>nexus-gitrele</PackageId> 
+    <PackageId>nexus-gitr$(BranchName)</PackageId> 
   </PropertyGroup>
 <!--
   <ItemGroup>
