--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '8.0.x'  # Specify the version of .NET you are using
+          dotnet-version: '8.0.x'  #give the dotnet version u are using
 
       - name: Restore dependencies
         run: dotnet restore
@@ -26,21 +26,25 @@ jobs:
       - name: Build project
         run: dotnet build --configuration Release
 
-      - name: Set package name
+      - name: Set package name and version
         id: set_name
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/develop" ]]; then
             PACKAGE_ID="nexus-git-${{ github.run_id }}-develop"
+            PACKAGE_VERSION=""  
           elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
             COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
             PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
+            PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
           elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
             PACKAGE_ID="nexus-git-1.0.0"
+            PACKAGE_VERSION="1.0.0"
           fi
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
+          echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
 
       - name: Pack project
-        run: dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ env.PACKAGE_ID }}
+        run: dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ env.PACKAGE_ID }} /p:PackageVersion=${{ env.PACKAGE_VERSION }}
 
       - name: Push to Nexus Repository
         env:
@@ -48,5 +52,10 @@ jobs:
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
-          dotnet nuget push ./bin/Release/${{ env.PACKAGE_ID }}.1.0.0.nupkg --source http://52.187.94.85:8081/repository/yashm-nuget/ --api-key $NEXUS_API_KEY  
-          
+          if [[ -z "${{ env.PACKAGE_VERSION }}" ]]; then
+            #no vrsn for develop branch
+            dotnet nuget push ./bin/Release/${{ env.PACKAGE_ID }}.nupkg --source http://52.187.94.85:8081/repository/yashm-nuget/ --api-key $NEXUS_API_KEY
+          else
+            #version for the release and master branch
+            dotnet nuget push ./bin/Release/${{ env.PACKAGE_ID }}.${{ env.PACKAGE_VERSION }}.nupkg --source http://52.187.94.85:8081/repository/yashm-nuget/ --api-key $NEXUS_API_KEY
+          fi
