changes in csproj

--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -31,7 +31,7 @@ jobs:
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
             PACKAGE_ID="nexus-git-${{ github.run_id }}-development"
-            PACKAGE_VERSION=""  # No version suffix for development
+            PACKAGE_VERSION=""  
           elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
             COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
             PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
