--- a/nexus-git.csproj
+++ b/nexus-git.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>nexus_git</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <!--<Version>$(PackageVersion)</Version> -->  
+    <Version>$(PackageVersion)</Version>   
     <PackageId>$(CustomPackageId)</PackageId> 
   </PropertyGroup>
 
