--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -31,7 +31,7 @@ jobs:
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
             PACKAGE_ID="nexus-git-${{ github.run_id }}-development"
-            PACKAGE_VERSION=""  # No version suffix for development
+            PACKAGE_VERSION="1.0.0"  
           elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
             COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
             PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
@@ -45,13 +45,7 @@ jobs:
 
       - name: Pack project
         run: |
-          if [[ -z "${{ env.PACKAGE_VERSION }}" ]]; then
-            #for devlopment br
-            dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ env.PACKAGE_ID }}
-          else
-            #for master and release
-            dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ env.PACKAGE_ID }} /p:PackageVersion=${{ env.PACKAGE_VERSION }}
-          fi
+          dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ env.PACKAGE_ID }} /p:PackageVersion=${{ env.PACKAGE_VERSION }}
 
       - name: Push to Nexus Repository
         env:
@@ -59,10 +53,4 @@ jobs:
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
-          if [[ -z "${{ env.PACKAGE_VERSION }}" ]]; then
-            #for devlopment br with no vrsn
-            dotnet nuget push ./bin/Release/${{ env.PACKAGE_ID }}.nupkg --source http://52.187.94.85:8081/repository/yashm-nuget/ --api-key $NEXUS_API_KEY
-          else
-            #vrsn for master and release
-            dotnet nuget push ./bin/Release/${{ env.PACKAGE_ID }}.${{ env.PACKAGE_VERSION }}.nupkg --source http://52.187.94.85:8081/repository/yashm-nuget/ --api-key $NEXUS_API_KEY
-          fi
+          dotnet nuget push ./bin/Release/${{ env.PACKAGE_ID }}.${{ env.PACKAGE_VERSION }}.nupkg --source http://52.187.94.85:8081/repository/yashm-nuget/ --api-key $NEXUS_API_KEY
