--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '8.0.x'  #the .net vrsn u are using
+          dotnet-version: '8.0.x'  # Specify the version of .NET you are using
 
       - name: Restore dependencies
         run: dotnet restore
@@ -29,15 +29,16 @@ jobs:
       - name: Set package name and version
         id: set_name
         run: |
+          FOLDER_NAME="nexus-git-development"  # Define your folder name here
           if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
-            PACKAGE_ID="nexus-git-development/nexus-git-${{ github.run_id }}-development"
+            PACKAGE_ID="${FOLDER_NAME}/nexus-git-${{ github.run_id }}-development"
             PACKAGE_VERSION="1.0.0"  
           elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
             COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
-            PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
+            PACKAGE_ID="${FOLDER_NAME}/nexus-git-1.0.0-release-${COMMIT_ID}"
             PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
           elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-            PACKAGE_ID="nexus-git-1.0.0"
+            PACKAGE_ID="${FOLDER_NAME}/nexus-git-1.0.0"
             PACKAGE_VERSION="1.0.0"
           fi 
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
@@ -53,4 +54,5 @@ jobs:
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
-          dotnet nuget push ./bin/Release/${{ env.PACKAGE_ID }}.${{ env.PACKAGE_VERSION }}.nupkg --source http://52.187.94.85:8081/repository/nuget-snapshot/ --api-key $NEXUS_API_KEY
+          # Push the package to the Nexus repository
+          dotnet nuget push ./bin/Release/${{ env.PACKAGE_ID }}.${{ env.PACKAGE_VERSION }}.nupkg --source http://52.187.94.85:8081/repository/nexus-git-development/ --api-key $NEXUS_API_KEY
