--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '8.0.x'  # Specify the version of .NET you are using
+          dotnet-version: '8.0.x'  
 
       - name: Restore dependencies
         run: dotnet restore
@@ -29,16 +29,16 @@ jobs:
       - name: Set package name and version
         id: set_name
         run: |
-          FOLDER_NAME="nexus-git-development"  # Define your folder name here
+          FOLDER_NAME="nexus-git-development"  
           if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
-            PACKAGE_ID="${FOLDER_NAME}/nexus-git-${{ github.run_id }}-development"
+            PACKAGE_ID="${FOLDER_NAME}.nexus-git-${{ github.run_id }}-development"
             PACKAGE_VERSION="1.0.0"  
           elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
             COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
-            PACKAGE_ID="${FOLDER_NAME}/nexus-git-1.0.0-release-${COMMIT_ID}"
+            PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
             PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
           elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-            PACKAGE_ID="${FOLDER_NAME}/nexus-git-1.0.0"
+            PACKAGE_ID="nexus-git-1.0.0"
             PACKAGE_VERSION="1.0.0"
           fi 
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
