--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -47,6 +47,12 @@ jobs:
       - name: Pack project
         run: |
           dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ env.PACKAGE_ID }} /p:PackageVersion=${{ env.PACKAGE_VERSION }}
+    
+      - name: Request approval to push to Nexus
+        run: echo "Waiting for manual approval before pushing to Nexus..."
+        environment:
+          name: nexus-approval  
+          url: https://github.com/yashmahi88/settings/environments/nexus-approval
 
       - name: Push to Nexus Repository
         env:
