--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: nexus-approval  # Define the environment here
 
     steps:
       - name: Checkout code
@@ -18,7 +19,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '8.0.x'  #the .net vrsn u are using
+          dotnet-version: '8.0.x'  
 
       - name: Restore dependencies
         run: dotnet restore
@@ -29,9 +30,10 @@ jobs:
       - name: Set package name and version
         id: set_name
         run: |
+          FOLDER_NAME="nexus-git-development"  
           if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
-            PACKAGE_ID="nexus-git-${{ github.run_id }}-development"
-            PACKAGE_VERSION="1.0.0"  
+            PACKAGE_ID="${FOLDER_NAME}.nexus-git"  
+            PACKAGE_VERSION="1.0.0-${{ github.run_id }}" 
           elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
             COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
             PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
@@ -47,7 +49,12 @@ jobs:
         run: |
           dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ env.PACKAGE_ID }} /p:PackageVersion=${{ env.PACKAGE_VERSION }}
 
+      - name: Request approval to push to Nexus
+        if: ${{ github.ref == 'refs/heads/development' || github.ref == 'refs/heads/master' || github.ref == 'refs/heads/release' }}
+        run: echo "Waiting for manual approval before pushing to Nexus..."
+
       - name: Push to Nexus Repository
+        if: ${{ github.ref == 'refs/heads/development' || github.ref == 'refs/heads/master' || github.ref == 'refs/heads/release' }}
         env:
           NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
