--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -48,12 +48,24 @@ jobs:
         run: |
           dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ env.PACKAGE_ID }} /p:PackageVersion=${{ env.PACKAGE_VERSION }}
 
+      - name: Upload Package as Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: nuget-package
+          path: ./bin/Release/${{ env.PACKAGE_ID }}.${{ env.PACKAGE_VERSION }}.nupkg
+
   push_to_nexus:
     runs-on: ubuntu-latest
-    needs: build  # This job depends on the build job
-    environment: nexus-approval  # Require approval for this job
+    needs: build  
+    environment: nexus-approval  
 
     steps:
+      - name: Download Package Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: nuget-package
+          path: ./bin/Release
+
       - name: Push to Nexus Repository
         env:
           NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
